[hotfix] Set `job="menu-api"` label
Previously, our (not yet configuration-as-coded) dashboard was relying
on `app="menu-api"`, a label that the Typescript microservice set by
itself. However, https://github.com/epfl-si/wp-menu-api/pull/11 broke
that.

Set a `job="menu-api"` label from the Kubernetes side instead.

--- a/ansible/roles/wordpress-namespace/tasks/menu-api.yml
+++ b/ansible/roles/wordpress-namespace/tasks/menu-api.yml
@@ -202,5 +202,6 @@
         selector:
           matchLabels:
             app: menu-api
+        jobLabel: app
         podMetricsEndpoints:
           - port: menu-api-port
