[fix] Don't mention lua in dashboard title

--- a/ansible/roles/wordpress-namespace/templates/grafana/nginx.json
+++ b/ansible/roles/wordpress-namespace/templates/grafana/nginx.json
@@ -16,7 +16,7 @@
       }
     ]
   },
-  "description": "nginx dashboard for nginx-lua-prometheus",
+  "description": "Basic nginx vitals: error rate and latency",
   "editable": true,
   "fiscalYearStartMonth": 0,
   "graphTooltip": 0,
