--- a/ansible/roles/wordpress-namespace/vars/image-vars.yml
+++ b/ansible/roles/wordpress-namespace/vars/image-vars.yml
@@ -1,5 +1,1 @@
-image_pull_secret_name: >-
- {{     "svc0041-rke2-puller-pull-secret" if "rke2_namespaces" in group_names
-    else "svc0041-svc0041-puller-pull-secret" if "openshift_namespaces" in group_names
-    else None
- }}
+image_pull_secret_name: "svc0041-svc0041-puller-pull-secret"
