[feature] Serve `robots.txt` out of WordPress

--- a/docker/wordpress-nginx/wordpress_fastcgi.conf
+++ b/docker/wordpress-nginx/wordpress_fastcgi.conf
@@ -28,3 +28,6 @@ location ~ ^[^.]*$ {
 location ~ \.php$ {
   fastcgi_pass unix:/run/php-fpm/php-fpm.sock;
 }
+location ~ /robots.txt$ {
+  fastcgi_pass unix:/run/php-fpm/php-fpm.sock;
+}
