--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -11,6 +11,17 @@
         msg: |
           You must update Ansible to at least 2.6 to use this playbook.
 
+- name: Log in to Kubernetes
+  hosts: all_namespaces
+  vars_files: ansible-k8s-credentials.yml
+  environment:
+    K8S_AUTH_KUBECONFIG: "{{ k8s_auth_kubeconfig }}"
+  tasks:
+  - name: Log in to cluster
+    tags: always
+    import_tasks:
+      file: tasks/k8s-login.yml
+
 - name: OLM catalog image
   hosts: namespace|svc0041t-wordpress
   gather_facts: False
