[fix] As per review, only accept `robots.txt` at the root

--- a/docker/wordpress-nginx/wordpress_fastcgi.conf
+++ b/docker/wordpress-nginx/wordpress_fastcgi.conf
@@ -28,6 +28,6 @@ location ~ ^[^.]*$ {
 location ~ \.php$ {
   fastcgi_pass unix:/run/php-fpm/php-fpm.sock;
 }
-location ~ /robots.txt$ {
+location = /robots.txt {
   fastcgi_pass unix:/run/php-fpm/php-fpm.sock;
 }
