--- a/ansible/roles/wordpress-namespace/tasks/nginx.yml
+++ b/ansible/roles/wordpress-namespace/tasks/nginx.yml
@@ -30,7 +30,9 @@
         name: wp-nginx
         namespace: "{{ inventory_namespace }}"
       spec:
-        replicas: 2
+        replicas: >-
+          {{ 2 if inventory_deployment_stage == "production"
+          else 1 }}
         selector:
           matchLabels:
             app: wp-nginx
