--- a/docker/wordpress-php/php.ini
+++ b/docker/wordpress-php/php.ini
@@ -1,3 +1,5 @@
 [php]
 ;; A `realpath(3)` cache, really. What is this, Windows®?
 realpath_cache_size = 0
+upload_max_filesize = 50M
+post_max_size = 50M
