[feature] Authenticated msmtp

--- a/ansible/roles/wordpress-namespace/tasks/main.yml
+++ b/ansible/roles/wordpress-namespace/tasks/main.yml
@@ -37,6 +37,7 @@
   tags:
     - wp
     - wp.secrets
+    - msmtp
 
 - name: Web server
   include_tasks:
@@ -133,4 +134,3 @@
     - wp.grafana
     - wp.monitoring
     - monitoring
-
