--- a/ansible/roles/wordpress-namespace/tasks/secrets.yml
+++ b/ansible/roles/wordpress-namespace/tasks/secrets.yml
@@ -15,8 +15,8 @@
         name: "smtp-password"
         namespace: "{{ inventory_namespace }}"
       data:
-         SERVICE_WWP_NOREPLY_PASSWORD: "{{ smtp.password | eyaml(eyaml_keys) | b64encode }}"
-  tags: httpd.secrets
+         SERVICE_WWW_NOREPLY_SMTP_PASSWORD: "{{ smtp.password | eyaml(eyaml_keys) | b64encode }}"
+  tags: msmtp
 
 - name: EPFL plugin secrets
   kubernetes.core.k8s:
