[refactor] Eliminate top-level `ansible/vars/image-vars.yml`
- Move it under `ansible/roles/olm-catalog` as it is (currently) only
being used there
- Make `builder_secrets` private to the vars file (as it is not in use
anywhere else)

--- a/ansible/roles/olm-catalog/tasks/main.yml
+++ b/ansible/roles/olm-catalog/tasks/main.yml
@@ -13,7 +13,7 @@
     - images
 
 - tags: always
-  include_vars: ../../../vars/image-vars.yml
+  include_vars: catalog-vars.yml
 
 - name: "Images and builds"
   include_tasks:
