[refactor] Hoist `image_pull_secret_name` to `vars/quay-vars.yml`
- rename the variable to `quay_puller_secret_name`
- compute its value out out of the robot account name, like Quay itself does

--- a/ansible/roles/wordpress-namespace/tasks/menu-api.yml
+++ b/ansible/roles/wordpress-namespace/tasks/menu-api.yml
@@ -1,4 +1,4 @@
-- include_vars: image-vars.yml
+- include_vars: ../../../vars/quay-vars.yml
   tags: always
 
 - name: ConfigMap/menu-api
@@ -120,7 +120,7 @@
                 configMap:
                   name: menu-api
             imagePullSecrets:
-              - name: "{{ image_pull_secret_name }}"
+              - name: "{{ quay_puller_secret_name }}"
   vars:
     _cpu_request: >-
       {{ "1" if inventory_deployment_stage == "production"
