--- a/ansible/roles/wordpress-namespace/tasks/nginx.yml
+++ b/ansible/roles/wordpress-namespace/tasks/nginx.yml
@@ -1,5 +1,8 @@
-- include_vars: image-vars.yml
-  tags: always
+- tags: always
+  include_vars: "{{ item }}"
+  with_items:
+  - image-vars.yml
+  - ../../../vars/quay-vars.yml
 
 - name: ConfigMap/wp-nginx
   kubernetes.core.k8s:
@@ -133,7 +136,7 @@
                   - --log.level
                   - debug
             imagePullSecrets:
-              - name: "{{ image_pull_secret_name }}"
+              - name: "{{ quay_puller_secret_name }}"
             restartPolicy: Always
             volumes:
               - name: fpm-socket
