--- a/ansible/roles/wordpress-namespace/tasks/nginx.yml
+++ b/ansible/roles/wordpress-namespace/tasks/nginx.yml
@@ -44,20 +44,9 @@
               app: wp-nginx
               version: "{{ nginx_deployment_images_tag }}"
           spec:
-            affinity:
-              podAntiAffinity:
-                requiredDuringSchedulingIgnoredDuringExecution:
-                  - labelSelector:
-                      matchLabels:
-                        app: wp-nginx
-                    topologyKey: kubernetes.io/hostname
-                preferredDuringSchedulingIgnoredDuringExecution:
-                  - weight: 100
-                    podAffinityTerm:
-                      labelSelector:
-                        matchLabels:
-                          app: wp-nginx
-                      topologyKey: topology.kubernetes.io/zone
+            affinity: >-
+              {{ {} if ( inventory_has_only_one_worker_node | default(False) )
+              else _affinity_spread_out_on_cluster }}
             serviceAccountName: wp-nginx
             automountServiceAccountToken: false
             containers:
@@ -196,6 +185,20 @@
          else { "cpu": _request_cpu_serving, "memory": _request_ram } }}
     _request_cpu_de_minimis: "20m"
     _request_ram_de_minimis: "256Mi"
+    _affinity_spread_out_on_cluster:
+       podAntiAffinity:
+         requiredDuringSchedulingIgnoredDuringExecution:
+           - labelSelector:
+               matchLabels:
+                 app: wp-nginx
+             topologyKey: kubernetes.io/hostname
+         preferredDuringSchedulingIgnoredDuringExecution:
+           - weight: 100
+             podAffinityTerm:
+               labelSelector:
+                 matchLabels:
+                   app: wp-nginx
+               topologyKey: topology.kubernetes.io/zone
 
 - name: PodDisruptionBudget/wp-nginx
   kubernetes.core.k8s:
