--- a/ansible/roles/wordpress-namespace/tasks/storage.yml
+++ b/ansible/roles/wordpress-namespace/tasks/storage.yml
@@ -51,6 +51,7 @@
         resources:
           requests:
             cpu: 100m
+            memory: 250Mi
 
 - name: PersistentVolumeClaim/wordpress-data
   kubernetes.core.k8s:
