--- a/ansible/roles/wordpress-namespace/tasks/storage.yml
+++ b/ansible/roles/wordpress-namespace/tasks/storage.yml
@@ -32,7 +32,6 @@
   with_items:
     - data
     - db
-    - apache-redirector
   kubernetes.core.k8s:
     state: present
     definition:
@@ -113,3 +112,22 @@
           requests:
             storage: 1Gi
         storageClassName: ""
+
+- name: PersistentVolumeClaim/wordpress-apache-redirector
+  kubernetes.core.k8s:
+    state: present
+    definition:
+      apiVersion: v1
+      kind: PersistentVolumeClaim
+      metadata:
+        name: wordpress-apache-redirector
+        namespace: "{{ inventory_namespace }}"
+      spec:
+        accessModes:
+          - ReadWriteMany
+        resources:
+          requests:
+            storage: 100Mi
+        storageClassName: ""
+        volumeMode: Filesystem
+        volumeName: pv-svc0041-wordpress-apache-redirector
